2000-09-24  Anders Carlsson  <andersca@gnu.org>

	* tasklist_applet.c (layout_tasklist): Prevent segfaulting
	when using ultra tiny panels.

2000-05-21  Jacob Berkman  <jacob@helixcode.com>

	* tasklist_icon.c (tasklist_icon_create_minimized_icon): don't
	make minimized icons so faint

2000-05-09  Jacob Berkman  <jacob@helixcode.com>

	* tasklist_icon.c (tasklist_icon_get_pixmap): gets the WM_HINT
	(tasklist_icon_check_x): don't leak memory
	(tasklist_icon_set): check the WMHint icon before KDE

	* tasklist_applet.h (TasklistTask): add a Pixmap field

	* tasklist_applet.c (task_notifier): change the icon when it gets changed
	(task_notifier): initialize the icon

Sat May 06 00:14:01 2000  George Lebl <jirka@5z.com>

	* unknown.xpm: add const so that we don't have to cast inside source

	* tasklist_applet.c: put in gtk_paint_flat_box with no shadow so that
	  we actually clear old tasks.  minimize flicker by only drawing
	  what's being exposed, including only drawing tasks that are being
	  exposed.

2000-05-04  Jacob Berkman  <jacob@helixcode.com>

	* tasklist_icon.c: 
	* tasklist_applet.c: show icons as 20x20, and get rid of the extra
	in shadow.  Also set the default window icon

2000-04-24  Fatih Demir	<kabalak@gmx.net>
	
	* tasklist_applet.desktop : Added [tr] section

2000-04-23  Anders Carlsson  <andersca@gnu.org>

	* tasklist_icon.c (tasklist_icon_check_x): Prevent up2date from
	crashing the tasklist. The _real_ bug has to be fixed somewhere else
	though.

2000-04-22 John Fleck <jfleck@inkstain.net>

	* updated tasklist-fig.png to reflect wmhint icon support

2000-04-16  Anders Carlsson  <andersca@gnu.org>

	* tasklist_properties.c (cb_spin_button): connect to "changed" on the
	spin button instead of the adjustment. This fixes bug #9053.

2000-04-15  Anders Carlsson  <andersca@gnu.org>

	* tasklist_applet.h: Remove mask from TasklistIcon since we now use
	gdk_pixbuf_render_to_drawable_alpha.

	* tasklist_properties.c: Add <config.h> for correct i18n stuff.
